--- a/client/src/Components/HomePage/header.css
+++ b/client/src/Components/HomePage/header.css
@@ -1,19 +1,12 @@
-/* img {
-	width: 48px;
-	height: 48px;
-	margin: 20px;
-} */
-
 .parentDiv {
 	display: flex;
 	justify-content: space-between;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #006238;
 }
 
 .logoAndText {
 	display: flex;
 	margin-left: 200px;
-	/*   float:left; */
 }
 .logo {
 	width: 48px;
