--- a/client/src/Components/HomePage/header.css
+++ b/client/src/Components/HomePage/header.css
@@ -1,27 +1,27 @@
 .parentDiv {
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	border-bottom: 1px solid #006238;
 }
 
 .logoAndText {
 	display: flex;
+	align-items: center;
 	margin-left: 200px;
 }
 .logo {
 	width: 48px;
 	height: 48px;
-	margin: 20px;
 }
 .instaclone {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	padding-top: 12px;
 	font: normal normal normal 48px/60px Palatino;
 	letter-spacing: 0px;
-	/* margin-left: 10px; */
+	margin-top: 0px;
 	color: #006238;
 	opacity: 1;
+	margin-left: 5px;
+	margin-bottom: 0px;
 }
 .camera {
 	width: 36px;
