--- a/client/src/Components/LandingPage/LandingPage.css
+++ b/client/src/Components/LandingPage/LandingPage.css
@@ -1,9 +1,11 @@
+body {overflow: hidden}
+
 /* deviding the landing page into two parts one for the image and one for button and text and displaying it as flex */
 /* flex container */
 .landingPage {
   display: flex;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   padding-left: 5%;
 }
 
@@ -17,7 +19,7 @@
 }
 
 .homePage-img {
-  height: 95vh;
+  height: 90vh;
   width: 30vw;
 }
 
