--- a/client/src/header.css
+++ b/client/src/header.css
@@ -1,18 +1,19 @@
 .parentDiv {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	/* align-items: center;
+	justify-content: space-between; */
 	border-bottom: 1px solid #006238;
 	position: fixed;
 	background-color: white;
 	width: 100%;
 	z-index: 1;
+	margin-top: -10px;
 }
 
 .logoAndText {
 	display: flex;
 	align-items: center;
-	margin-left: 200px;
+	/* padding-left: 200px; */
 }
 .logo {
 	width: 48px;
@@ -24,12 +25,19 @@
 	margin-top: 0px;
 	color: #006238;
 	opacity: 1;
-	margin-left: 5px;
+	padding-left: 15px;
 	margin-bottom: 0px;
 }
 .camera {
 	width: 36px;
 	height: 36px;
 	margin: 26px;
-	padding-right: 200px;
+	/* padding-right: 200px; */
+}
+.header-content {
+	width: 80%;
+	margin: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
