--- a/client/src/Components/post_component/post_component.css
+++ b/client/src/Components/post_component/post_component.css
@@ -1,11 +1,9 @@
-body{
-	overflow: hidden;
-}
+
 .outerDiv{
 display: inline;
 position:  absolute;
 width: 100%;
-overflow: hidden;
+
 }
 .postList{
 	overflow: hidden;
@@ -124,12 +122,13 @@ p {
 	width: 32px;
 	height: 32px;
 	margin-left: 12px;
-	transform: scale(0.8);
+	/* transform: scale(0.8); */
+
 }
 .likebut {
 	height: 32px;
 	width: 32px;
 	background: transparent url("./post_list/images/heart.png") 0% 0% no-repeat padding-box;
 	opacity: 1;
-	transform: scale(0.8);
+	/* transform: scale(0.8); */
 }
