--- a/client/src/Components/create_post/add_post/add_post.css
+++ b/client/src/Components/create_post/add_post/add_post.css
@@ -1,13 +1,15 @@
 .boxComponents {
 	margin-left: 5%;
 	margin-right: 5%;
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	display: flex;
 	margin-top: 2%;
 	margin-left: 30%;
 	margin-right: 30%;
 	flex-direction: column;
 	padding: 0.8% 3% 0% 3%;
+	position: relative;
+	top: 100px;
 
 }
 
@@ -40,7 +42,7 @@
 }
 
 .browseButton {
-	border: solid lightgray ;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 20%;
 	border-radius: 5px;
@@ -50,7 +52,7 @@
 }
 
 .inputFile {
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 80%;
 	border-radius: 5px;
@@ -60,7 +62,7 @@
 }
 
 .authorName {
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 35%;
 	text-align: left;
@@ -71,7 +73,7 @@
 }
 
 .itemLocation {
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 35%;
 	text-align: left;
@@ -82,7 +84,7 @@
 }
 
 .itemCaption {
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 99%;
 	border-radius: 5px;
@@ -92,7 +94,7 @@
 }
 
 .postButton {
-	border: solid lightgray;
+	border: 1px solid lightgray ;
 	outline: none;
 	width: 15%;
 	border-radius: 5px;
