--- a/client/src/Components/navigation_bar/header.css
+++ b/client/src/Components/navigation_bar/header.css
@@ -1,9 +1,8 @@
 .parentDiv {
 	display: flex;
-	/* align-items: center;
-	justify-content: space-between; */
+
 	border-bottom: 1px solid #006238;
-	position: sticky;
+	position: fixed;
 	background-color: white;
 	width: 100%;
 
