--- a/client/src/Components/post_component/post_component.css
+++ b/client/src/Components/post_component/post_component.css
@@ -122,7 +122,7 @@ p {
 	width: 32px;
 	height: 32px;
 	margin-left: 12px;
-	/* transform: scale(0.8); */
+	transform: scale(0.8);
 
 }
 .likebut {
@@ -130,5 +130,5 @@ p {
 	width: 32px;
 	background: transparent url("./post_list/images/heart.png") 0% 0% no-repeat padding-box;
 	opacity: 1;
-	/* transform: scale(0.8); */
+	transform: scale(0.8);
 }
