--- a/client/src/Components/navigation_bar/header.css
+++ b/client/src/Components/navigation_bar/header.css
@@ -2,10 +2,9 @@
 	display: flex;
 	border-bottom: 1px solid #006238;
 	position: fixed;
+	top: 0px;
 	background-color: white;
 	width: 100%;
-
-	margin-top: -10px;
 }
 
 .logoAndText {
