--- a/client/src/Components/create_post/add_post/add_post.css
+++ b/client/src/Components/create_post/add_post/add_post.css
@@ -3,13 +3,13 @@
 	margin-right: 5%;
 	border: 1px solid lightgray;
 	display: flex;
-	margin-top: 2%;
+	margin-top: 0%;
 	margin-left: 30%;
 	margin-right: 30%;
 	flex-direction: column;
 	padding: 0.8% 3% 0% 3%;
 	position: relative;
-	top: 100px;
+	top: 229px;
 }
 
 .dataCollection {
@@ -43,11 +43,14 @@
 .browseButton {
 	border: 1px solid lightgray;
 	outline: none;
-	width: 20%;
+	width: 100px;
+	height: 32px;
 	border-radius: 5px;
 	padding-top: 1%;
 	padding-bottom: 1%;
-	font: normal normal normal 12px/20px Verdana;
+	font: normal normal normal 18px/22px Verdana;
+    cursor: pointer;
+	size: 60px;
 }
 
 .inputFile {
@@ -92,10 +95,24 @@
 	font: normal normal normal 18px/22px Verdana;
 }
 
-.postButton {
+.postButton:disabled {
 	border: 1px solid lightgray;
 	outline: none;
-	width: 15%;
+	width: 100px;
+	height: 32px;
+	border-radius: 5px;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	font: normal normal normal 18px/22px Verdana;
+}
+
+.postButton:enabled {
+	border: 1px solid #347DFD;
+	background-color: #347DFD;
+	color: rgb(255, 255, 255);
+	outline: none;
+	width: 100px;
+	height: 32px;
 	border-radius: 5px;
 	padding-top: 1%;
 	padding-bottom: 1%;
