--- a/client/src/Components/post_component/post_component.css
+++ b/client/src/Components/post_component/post_component.css
@@ -1,13 +1,10 @@
-
-.outerDiv{
-display: inline;
-position:  absolute;
-width: 100%;
-
+.outerDiv {
+	display: inline;
+	position: absolute;
+	width: 100%;
 }
-.postList{
+.postList {
 	overflow: hidden;
-
 }
 .post-card {
 	max-width: 500px;
@@ -16,7 +13,6 @@ width: 100%;
 	flex-direction: column;
 	padding: 20px;
 	padding-top: 120px;
-
 }
 .card {
 	width: 100%;
@@ -114,21 +110,19 @@ p {
 .postimg {
 	width: 100%;
 	height: 200px;
-	background: transparent
-		url("https://i.ytimg.com/vi/5sTg4Oeh2rM/maxresdefault.jpg") 0% 0% no-repeat
-		padding-box;
+	background: transparent 0% 0% no-repeat padding-box;
 }
 .sharebut {
 	width: 32px;
 	height: 32px;
 	margin-left: 12px;
 	transform: scale(0.8);
-
 }
 .likebut {
 	height: 32px;
 	width: 32px;
-	background: transparent url("./post_list/images/heart.png") 0% 0% no-repeat padding-box;
+	background: transparent url("./post_list/images/heart.png") 0% 0% no-repeat
+		padding-box;
 	opacity: 1;
 	transform: scale(0.8);
 }
