--- a/client/src/Components/create_post/add_post/add_post.css
+++ b/client/src/Components/create_post/add_post/add_post.css
@@ -1,13 +1,15 @@
 .boxComponents {
 	margin-left: 5%;
 	margin-right: 5%;
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	display: flex;
-	margin-top: 2%;
+	margin-top: 0%;
 	margin-left: 30%;
 	margin-right: 30%;
 	flex-direction: column;
 	padding: 0.8% 3% 0% 3%;
+	position: relative;
+	top: 229px;
 }
 
 .dataCollection {
@@ -39,17 +41,20 @@
 }
 
 .browseButton {
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	outline: none;
-	width: 20%;
+	width: 100px;
+	height: 32px;
 	border-radius: 5px;
 	padding-top: 1%;
 	padding-bottom: 1%;
 	font: normal normal normal 18px/22px Verdana;
+    cursor: pointer;
+	size: 60px;
 }
 
 .inputFile {
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	outline: none;
 	width: 80%;
 	border-radius: 5px;
@@ -59,7 +64,7 @@
 }
 
 .authorName {
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	outline: none;
 	width: 35%;
 	text-align: left;
@@ -70,7 +75,7 @@
 }
 
 .itemLocation {
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	outline: none;
 	width: 35%;
 	text-align: left;
@@ -81,7 +86,7 @@
 }
 
 .itemCaption {
-	border: solid lightgray;
+	border: 1px solid lightgray;
 	outline: none;
 	width: 99%;
 	border-radius: 5px;
@@ -90,12 +95,27 @@
 	font: normal normal normal 18px/22px Verdana;
 }
 
-.postButton {
-	border: solid lightgray;
+.postButton:disabled {
+	border: 1px solid lightgray;
 	outline: none;
-	width: 15%;
+	width: 100px;
+	height: 32px;
 	border-radius: 5px;
 	padding-top: 1%;
 	padding-bottom: 1%;
 	font: normal normal normal 18px/22px Verdana;
 }
+
+.postButton:enabled {
+	border: 1px solid #347DFD;
+	background-color: #347DFD;
+	color: rgb(255, 255, 255);
+	outline: none;
+	width: 100px;
+	height: 32px;
+	border-radius: 5px;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	font: normal normal normal 18px/22px Verdana;
+}
+
