--- a/client/src/Components/landing_page/landing_page.css
+++ b/client/src/Components/landing_page/landing_page.css
@@ -1,6 +1,4 @@
-body {
-	overflow: hidden;
-}
+
 
 a {
 	text-decoration: none;
@@ -10,8 +8,9 @@ a {
 .landingPage {
 	display: flex;
 	padding-top: 5vh;
-	padding-bottom: 5vh;
+	/* padding-bottom: 5vh; */
 	padding-left: 5%;
+	
 }
 
 /*-------------------- left section (image section)------------------------ */
@@ -45,6 +44,7 @@ a {
 	margin-bottom: 15px;
 	font: normal normal normal 45px/64px Palatino;
 	margin-left: 90px;
+	white-space: nowrap;
 }
 .enterButton {
 	color: #006238;
